# flashy

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  test_speech.py
.github/workflows/: ci.yml
assets/originals/: world-1-addition-alps.HEIC  world-2-subtraction-swamp.HEIC  world-3-multiplication-meadows.HEIC  world-4-division-desert.HEIC
flashy/: __init__.py  game.py  history.py  input_handler.py  levels.py  main.py  map_display.py  number_parser.py  problems.py  story.py  worlds.py
flashy/core/: __init__.py  flow.py  i18n.py  levels.py  models.py  number_parser.py  problems.py  scoring.py  worlds.py
flashy/storage/: __init__.py  file_storage.py  protocol.py
flashy/ui/: __init__.py  app.py  base.py  voice.py
flashy/ui/screens/: __init__.py  boss_intro.py  boss_victory.py  intro.py  (+8 more)
flutter/: .gitignore  README.md  pubspec.yaml
flutter/lib/: main.dart
flutter/linux/: CMakeLists.txt
flutter/scripts/: deploy-web.sh  generate_icons.sh
flutter/test/: playthrough_test.dart  widget_test.dart
flutter/web/: index.html  manifest.json
flutter/windows/: CMakeLists.txt
scripts/: check.py  check_i18n.py  compare_i18n.py  process_assets.py  run-dev.sh  watch.py
tests/: test_architecture.py  test_flow.py  test_game.py  test_levels.py  test_number_parser.py  test_problems.py  test_scoring.py
tests/e2e/: conftest.py  test_gameplay.py  test_leaderboard.py  test_mobile.py  test_player_flow.py  test_progression.py  test_session_persistence.py
tests/unit/: test_flow.py  test_game.py  test_levels.py  test_models.py  test_problems.py  test_scoring.py
(+61 files in other folders)
