[project]
name = "flashy"
version = "0.1.0"
description = "Math flash card game for kids"
authors = [
    {name = "Greg"}
]
requires-python = ">=3.11"
dependencies = [
    "vosk (==0.3.44)",
    "sounddevice (>=0.5.3,<0.6.0)"
]


[project.scripts]
flashy = "flashy.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pyright = "^1.1.407"
ruff = "^0.14.6"

[tool.pyright]
typeCheckingMode = "standard"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]

