[project]
name = "flashy"
version = "0.1.0"
description = "Math flash card game for kids"
authors = [
    {name = "Greg"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "vosk (==0.3.44)",
    "sounddevice (>=0.5.3,<0.6.0)",
    "textual (>=6.6.0,<7.0.0)",
]


[project.scripts]
flashy = "flashy.platforms.tui.app:run_app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-playwright = "^0.7.0"
pyright = "^1.1.407"
ruff = "^0.14.6"

[tool.pyright]
typeCheckingMode = "standard"

[tool.ruff]
target-version = "py311"
exclude = ["flashy/platforms/web/flashy_core.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]

